[package]
name = "fenetre"
version = "0.1.0"
authors = ["Ross Gardiner <ross-public@gmx.com>", "Alessio Zakaria <alessio.b.zakaria@gmail.com>"]

[dependencies]
clippy = { version = "0.0.134", optional = true }
itertools-num = "0.1.1"
piston = "0.32.0"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.37.0"
piston2d-opengl_graphics = "0.43.1"
piston_window = "0.64.0"
nalgebra = "0.12.3"
ncollide = "0.12.0"
alga = "0.5.1"
